--- a/css.css
+++ b/css.css
@@ -117,72 +117,8 @@ img{
 	/* Darker shades */
 	--blue-darker: #282875;
 	--blue-darkest: #1b1b4d;
-	--blue-accent: #ffb900; /* Optional accent color */
-
-	--bs-blue: #0d6efd;
-	--bs-indigo: #6610f2;
-	--bs-purple: #6f42c1;
-	--bs-pink: #d63384;
-	--bs-red: #dc3545;
-	--bs-orange: #fd7e14;
-	--bs-yellow: #ffc107;
-	--bs-green: #198754;
-	--bs-teal: #20c997;
-	--bs-cyan: #0dcaf0;
-	--bs-gray: #6c757d;
-	--bs-gray-dark: #343a40;
-	--bs-gray-100: #f8f9fa;
-	--bs-gray-200: #e9ecef;
-	--bs-gray-300: #dee2e6;
-	--bs-gray-400: #ced4da;
-	--bs-gray-500: #adb5bd;
-	--bs-gray-600: #6c757d;
-	--bs-gray-700: #495057;
-	--bs-gray-800: #343a40;
-	--bs-gray-900: #212529;
-	--bs-primary: #0d6efd;
-	--bs-secondary: #6c757d;
-	--bs-success: #198754;
-	--bs-info: #0dcaf0;
-	--bs-warning: #ffc107;
-	--bs-danger: #dc3545;
-	--bs-light: #f8f9fa;
-	--bs-dark: #212529;
-	--bs-primary-rgb: 13, 110, 253;
-	--bs-secondary-rgb: 108, 117, 125;
-	--bs-success-rgb: 25, 135, 84;
-	--bs-info-rgb: 13, 202, 240;
-	--bs-warning-rgb: 255, 193, 7;
-	--bs-danger-rgb: 220, 53, 69;
-	--bs-light-rgb: 248, 249, 250;
-	--bs-dark-rgb: 33, 37, 41;
-	--bs-white-rgb: 255, 255, 255;
-	--bs-black-rgb: 0, 0, 0;
-	--bs-body-color-rgb: 33, 37, 41;
-	--bs-body-bg-rgb: 255, 255, 255;
-	--bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	--bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-	--bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-	--bs-body-font-family: var(--bs-font-sans-serif);
-	--bs-body-font-size: 1rem;
-	--bs-body-font-weight: 400;
-	--bs-body-line-height: 1.5;
-	--bs-body-color: #212529;
-	--bs-body-bg: #fff;
-	--bs-border-width: 1px;
-	--bs-border-style: solid;
-	--bs-border-color: #dee2e6;
-	--bs-border-color-translucent: rgba(0, 0, 0, 0.175);
-	--bs-border-radius: 0.375rem;
-	--bs-border-radius-sm: 0.25rem;
-	--bs-border-radius-lg: 0.5rem;
-	--bs-border-radius-xl: 1rem;
-	--bs-border-radius-2xl: 2rem;
-	--bs-border-radius-pill: 50rem;
-	--bs-link-color: #0d6efd;
-	--bs-link-hover-color: #0a58ca;
-	--bs-code-color: #d63384;
-	--bs-highlight-bg: #fff3cd;
+	--accent: #ffb900; /* Optional accent color */
+	--blue-deep: #0a0a33;
 }
 
 body {
@@ -216,7 +152,7 @@ a{
 	transition: .35s ease-out;
 }
 a:hover{
- 	color: var(--blue-accent);
+ 	color: var(--accent);
 }
 .active{
 	color: var(--blue) !important;
@@ -375,11 +311,11 @@ h1>span{
 	background-color: var(--white);
 }
 .services_cv a:hover{
-	color: var(--blue-accent);
+	color: var(--accent);
 }
 .services_cv a:hover::before {
 	width: 0;
-	background-color: var(--blue-accent);
+	background-color: var(--accent);
 }
 .services_grid{
 	display: grid;
@@ -444,7 +380,7 @@ h1>span{
 	font-weight: 400;
 }
 .about_contacts a:hover{
-	color: var(--blue-accent);
+	color: var(--accent);
 }
 .about_text{
 	margin-top: 43px;
@@ -492,7 +428,7 @@ h1>span{
 	left: -100%;
 	width: 100%;
 	height: 100%;
-	background: black;
+	background: var(--blue-deep);
 	color: white;
 	transition: left 0.5s ease;
 	display: flex;
