--- a/css.css
+++ b/css.css
@@ -158,7 +158,7 @@ a:hover{
 	color: var(--blue) !important;
 }
 .section{
-	margin-top: 65px;
+/*	margin-top: 65px;*/
 	padding-top: 85px;
 }
 .wrap{
@@ -484,9 +484,163 @@ h1>span{
 .portfolio_grid_block:nth-child(4) { grid-area: Image-4; }
 .portfolio_grid_block:nth-child(5) { grid-area: Image-5; }
 
+.blog_content ul{
+	padding-right: 40px;
+	width: 100%;
+}
+.blog_content li:not(:first-child){
+    border-top: 2px solid var(--white);
+}
+.blog_element{
+	display: flex;
+	justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+}
+.blog_element>a{
+	font-size: 26px;
+    margin-right: 30px;
+    color: var(--black);
+    font-weight: 700;
+}
+.blog_element>a:hover{
+	color: var(--accent);
+}
+.blog_info{
+	display: flex;
+	flex-direction: column;
+	font-weight: 700;
+    font-size: 10px;
+    line-height: 14px;
+    letter-spacing: 3px;
+    min-width: 100px;
+}
+.blog_info span:last-child{
+	color: var(--accent);
+}
 
-
-
+.contact{
+	margin-bottom: 65px;
+}
+.skills_group{
+	margin: auto;
+	width: 45vw;
+	background-color: var(--blue);
+	color: var(--white);
+	margin-top: 41px;
+    padding: 63px 60px 62px 94px;
+    margin-right: -100px;
+}
+.skills_group li{
+	display: flex;
+    align-items: center;
+    position: relative;
+}
+.skills_group li:before {
+    content: '';
+    position: absolute;
+    left: 28%;
+    top: 0;
+    background-color: var(--white);
+    width: 3px;
+    height: 100%;
+}
+.skills_date{
+	max-width: 28%;
+	width: 100%;
+    font-weight: 200;
+    font-size: 60px;
+    line-height: 30px;
+    transition: .35s ease-out;
+}
+.skills_group li:hover .skills_date{
+	transform: translateX(15px);
+    color: var(--accent);   
+}
+.skills_text{
+	max-width: 72%;
+    padding: 0 50px 0 80px;
+    transition: .35s ease-out;
+    margin-bottom: 0;
+}
+.skills_group li:hover .skills_text{
+	transform: translateX(-15px); 
+}
+.skills_group li:not(:first-child){
+    padding-top: 37px;
+}
+.skills_progress{
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-right: 40px;
+    padding-top: 69px;
+}
+.skills_progress li{
+	display: flex;
+    align-items: center;
+    width: calc(50% - 35px);
+    margin-bottom: 22px;
+}
+.skills_name{
+	font-size: 12px;
+    line-height: 28px;
+    letter-spacing: 3.5px;
+    width: 37%;
+    padding-right: 30px;
+    text-transform: uppercase;
+}
+.skill_fill{
+	width: 100%;
+    height: 10px;
+    background-color: var(--blue-lighter);
+    width: 63%;
+}
+.skill_fill_progress{
+    height: 10px;
+    background-color: var(--blue-darker);
+    transition: width .7s;
+}
+form input, form textarea {
+	margin-top: 0;
+	padding-top: 0;
+	font-family: 'Poppins', sans-serif;
+	font-size: 12px;
+	line-height: 25px;
+	letter-spacing: 3px;
+	color: #000;
+	background-color: transparent;
+	border: 0;
+	border-bottom: 2px solid;
+	padding-top: 13px;
+	padding-bottom: 0px;
+	padding-left: 0;
+	margin: 10px 0;
+	height: 28px;
+	width: 100%;
+	box-sizing: initial;
+}
+form textarea {
+	height: 150px;
+}
+form input[type=submit] {
+	display: inline-block;
+	border: 2px solid;
+	text-align: center;
+	padding: 20px 0px;
+	font-size: 14px;
+	cursor: pointer;
+	vertical-align: middle;
+	text-decoration: none;
+	background-color: transparent;
+	color: #000;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 700;
+	width: 100%;
+	letter-spacing: 8px;
+	transition: opacity .3s ease;
+	cursor: pointer;
+}
 
 
 
