Додаток скілів, проєктів можелі + адмінка
Також іморт на нову ОС з парочкою деталей

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -20,7 +20,7 @@
 				<div class="nav_page">
 					<span>01</span><span class="step">/</span><span>07</span>
 				</div>
-				<div class="nav_name"><a href="index.html">Yulian Tolkachov</a></div>
+				<div class="nav_name"><a href="index">Yulian Tolkachov</a></div>
 				<nav>
 					<ul>
 						<li><a href="#home">Home</a></li>
@@ -145,35 +145,35 @@
 						</div>
 						<div class="portfolio_grid">
 							<div class="portfolio_grid_block">
-								<a href="work.html" class="portfolio_grid_caption">
+								<a href="portfolio" class="portfolio_grid_caption">
 									<p class="portfolio_title">hi</p>
 									<p>hi</p>
 								</a>
 								<div class="portfolio_grid_img"><img src="{% static 'img/red.png' %}" alt=""></div>
 							</div>
 							<div class="portfolio_grid_block">
-								<a href="work.html" class="portfolio_grid_caption">
+								<a href="portfolio" class="portfolio_grid_caption">
 									<p class="portfolio_title">hi</p>
 									<p>hi</p>
 								</a>
 								<div class="portfolio_grid_img"><img src="{% static 'img/vertical.jpg' %}" alt=""></div>
 							</div>
 							<div class="portfolio_grid_block">
-								<a href="work.html" class="portfolio_grid_caption">
+								<a href="portfolio" class="portfolio_grid_caption">
 									<p class="portfolio_title">hi</p>
 									<p>hi</p>
 								</a>
 								<div class="portfolio_grid_img"><img src="{% static 'img/red2.png' %}" alt=""></div>
 							</div>
 							<div class="portfolio_grid_block">
-								<a href="work.html" class="portfolio_grid_caption">
+								<a href="portfolio" class="portfolio_grid_caption">
 									<p class="portfolio_title">hi</p>
 									<p>hi</p>
 								</a>
 								<div class="portfolio_grid_img"><img src="{% static 'img/red2.png' %}" alt=""></div>
 							</div>
 							<div class="portfolio_grid_block">
-								<a href="work.html" class="portfolio_grid_caption">
+								<a href="portfolio" class="portfolio_grid_caption">
 									<p class="portfolio_title">hi</p>
 									<p>hi</p>
 								</a>
@@ -194,23 +194,23 @@
 						</div>
 						<ul>
 							<li class="blog_element">
-								<a href="blog.html" class="blog_title">Testing link 1</a>
+								<a href="blog" class="blog_title">Testing link 1</a>
 								<div class="blog_info"><span>Mar 13, 2024</span><span>category</span></div>
 							</li>
 							<li class="blog_element">
-								<a href="blog.html" class="blog_title">Encyclopaedia galactica shores of cosmic</a>
+								<a href="blog" class="blog_title">Encyclopaedia galactica shores of cosmic</a>
 								<div class="blog_info"><span>Mar 13, 2024</span><span>category</span></div>
 							</li>
 							<li class="blog_element">
-								<a href="blog.html" class="blog_title">Testing link 1</a>
+								<a href="blog" class="blog_title">Testing link 1</a>
 								<div class="blog_info"><span>Mar 13, 2024</span><span>category</span></div>
 							</li>
 							<li class="blog_element">
-								<a href="blog.html" class="blog_title">Testing link 1</a>
+								<a href="blog" class="blog_title">Testing link 1</a>
 								<div class="blog_info"><span>Mar 13, 2024</span><span>category</span></div>
 							</li>
 							<li class="blog_element">
-								<a href="blog.html" class="blog_title">Encyclopaedia galactica shores of cosmic</a>
+								<a href="blog" class="blog_title">Encyclopaedia galactica shores of cosmic</a>
 								<div class="blog_info"><span>Mar 13, 2024</span><span>category</span></div>
 							</li>
 						</ul>
