--- a/portfolio/templates/blog.html
+++ b/portfolio/templates/blog.html
@@ -1,11 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mine</title>
-	<link rel="stylesheet" href="css.css">
-	<link rel="stylesheet" href="blog.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'css.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'blog.css' %}">
 </head>
 <body>
 	<div class="container">
