--- a/portfolio/static/work.css
+++ b/portfolio/static/work.css
@@ -33,6 +33,10 @@ main{
 }
 img{
 	max-width: 1500px;
+	width: 100%;
+    width: -moz-available;          /* WebKit-based browsers will ignore this. */
+    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    width: fill-available;
 }
 .blog_content li:not(:first-child) {
     border-top: none;
